ocaml/testsuite/tests/templates/basic/bad_instance_arg_value_not_found.ml
module Monoid_utils_of_int =
  Monoid_utils(Monoid)(Banana) [@jane.non_erasable.instances]
